@@ -277,6 +277,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   Added constant EXTRA_ADVICE_SUFFIXES to config.py to define extra suffixes to use for groups giving advice using a custom workflow
 - Meeting and MeetingItem WorkflowCondition 'mayCorrect' now receive an extra parameter 'destinationState' that is useful
   when a state has several 'back' transitions to know which transition we are working on
+- Moved emergency change comment popup to z3c.form to be able to define that comment is now required
 
 3.3 (2015-02-27)
 ----------------
